{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 189,
  "lineage": "6012fe50-2845-96b0-b0b2-e98428378250",
  "resources": [
    {
      "module": "module.tp-devops-test",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet-az-a",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:303981612052:subnet/subnet-6e151625",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-6e151625",
            "map_public_ip_on_launch": true,
            "owner_id": "303981612052",
            "state": "available",
            "vpc_id": "vpc-7932a701"
          }
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet-az-b",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:303981612052:subnet/subnet-6331d71b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-6331d71b",
            "map_public_ip_on_launch": true,
            "owner_id": "303981612052",
            "state": "available",
            "vpc_id": "vpc-7932a701"
          }
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet-az-c",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:303981612052:subnet/subnet-fb4cbda6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-fb4cbda6",
            "map_public_ip_on_launch": true,
            "owner_id": "303981612052",
            "state": "available",
            "vpc_id": "vpc-7932a701"
          }
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "data",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:303981612052:vpc/vpc-7932a701",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-394d6e53",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-6a159712",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-7932a701",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-f7aadc8c",
            "owner_id": "303981612052",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb-public",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:303981612052:loadbalancer/app/tptest-alb-public/ab746afd28a3bc80",
            "arn_suffix": "app/tptest-alb-public/ab746afd28a3bc80",
            "dns_name": "tptest-alb-public-685175440.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:303981612052:loadbalancer/app/tptest-alb-public/ab746afd28a3bc80",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tptest-alb-public",
            "security_groups": [
              "sg-0f6494141ac7c313b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-6331d71b"
              },
              {
                "subnet_id": "subnet-6e151625"
              },
              {
                "subnet_id": "subnet-fb4cbda6"
              }
            ],
            "subnets": [
              "subnet-6331d71b",
              "subnet-6e151625",
              "subnet-fb4cbda6"
            ],
            "tags": {
              "Environment": "test",
              "Name": "tptest-alb-public",
              "Owner": "terraform",
              "Terraform": "true"
            },
            "vpc_id": "vpc-7932a701",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.tp-devops-test.aws_security_group.sg-alb-public"
          ]
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener-80",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:303981612052:listener/app/tptest-alb-public/ab746afd28a3bc80/52fb85fd056f4e75",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "You've reached something ! ",
                    "status_code": "200"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:303981612052:listener/app/tptest-alb-public/ab746afd28a3bc80/52fb85fd056f4e75",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:303981612052:loadbalancer/app/tptest-alb-public/ab746afd28a3bc80",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.tp-devops-test.aws_alb.alb-public"
          ]
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb-tgrp-testing",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:303981612052:targetgroup/tptest-tgrp-testing/d1197e78dd6be042",
            "arn_suffix": "targetgroup/tptest-tgrp-testing/d1197e78dd6be042",
            "deregistration_delay": 10,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:303981612052:targetgroup/tptest-tgrp-testing/d1197e78dd6be042",
            "lambda_multi_value_headers_enabled": false,
            "name": "tptest-tgrp-testing",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-7932a701"
          }
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb-listener-rule-testing",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:303981612052:targetgroup/tptest-tgrp-testing/d1197e78dd6be042",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:303981612052:listener-rule/app/tptest-alb-public/ab746afd28a3bc80/52fb85fd056f4e75/a80e32fe628744cf",
            "condition": [
              {
                "field": "host-header",
                "values": [
                  "tptest-alb-public-685175440.us-west-2.elb.amazonaws.com"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:303981612052:listener-rule/app/tptest-alb-public/ab746afd28a3bc80/52fb85fd056f4e75/a80e32fe628744cf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:303981612052:listener/app/tptest-alb-public/ab746afd28a3bc80/52fb85fd056f4e75",
            "priority": 1
          },
          "dependencies": [
            "module.tp-devops-test.aws_alb.alb-public",
            "module.tp-devops-test.aws_alb_listener.alb-listener-80",
            "module.tp-devops-test.aws_alb_target_group.alb-tgrp-testing"
          ]
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb-public",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:303981612052:security-group/sg-0f6494141ac7c313b",
            "description": "Allow traffic in the public loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6494141ac7c313b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tptest-sg-alb-public",
            "name_prefix": null,
            "owner_id": "303981612052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "tptest-sg-alb-public",
              "Owner": "terraform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-7932a701"
          }
        }
      ]
    },
    {
      "module": "module.tp-devops-test",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ecs-default",
      "provider": "module.tp-devops-test.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:303981612052:security-group/sg-0ad6e8ae8579d4cf7",
            "description": "Allow all traffic inside the Fargate cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.31.48.0/20",
                  "172.31.16.0/20",
                  "172.31.0.0/20"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad6e8ae8579d4cf7",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.48.0/20",
                  "172.31.16.0/20",
                  "172.31.0.0/20"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tptest-sg-ecs-default",
            "name_prefix": null,
            "owner_id": "303981612052",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "tptest-sg-ecs-default",
              "Owner": "terraform",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-7932a701"
          }
        }
      ]
    }
  ]
}